# CHC

CHC_CSUga/: CMakeLists.txt
CHC_CSUga/CHC/: Makefile  README  XCHC  main.c
CHC_CSUga/CHC/Evals/: MOCMAParams.h  cclock.c  ch.c  ch.f  dejong_params.h  gasdev.c  hamilt.inc  m_evals.c  m_evals.h  numrecipes.f  ran2.c  shaper.f  shg.F  sleep.c
CHC_CSUga/CHC/F1/GREY/: f1.params  results.Z
CHC_CSUga/CHC/F5/: f5.config  f5.params  junk  junk2  run
CHC_CSUga/CHC/FSHG/: f100.config  f100.params  run  shg.basic  shg.basic.bcd6  shg.grey.1
CHC_CSUga/CHC/Include/: binarys.h  binarys_params.h  op_cataclysm.h  op_hux.h  op_hux_params.h  stats.h  stats_params.h
CHC_CSUga/CHC/Src/: binarys.c  op_cataclysm.c  op_hux.c  stats.c
CHC_CSUga/Ga/: Makefile  Makefile_orig
CHC_CSUga/Ga/Include/: ga_copy.h  ga_global.h  ga_global_extern.h  ga_params.h  ga_pool.h  ga_random.h  ga_selection.h  ga_signals.h  ga_status.h  ga_tournament.h  ga_xdr.h  gene.h
CHC_CSUga/Ga/Src/: ga_copy.c  ga_params.c  ga_pool.c  ga_random.c  ga_selection.c  ga_signals.c  ga_status.c  ga_tournament.c  ga_xdr.c
CHC_python/: CHC.py  Gene.py  Main.py  Pool.py  Status.py  binary_function.py  plot.py  read_config.py  selecation_functions.py
CHC_python/F1/: [1]  f1.config  f1.params  f1.pool  final_result  my_run  oshir  result  run
CHC_python/F1/GREY/: run
CHC_python/F1_old/: f1.config  results
CHC_python/F1_old/GREY/: f1.config
